src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCount_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCount_StringErrorContext.class */
public final class NVBindlessMultiDrawIndirectCount_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMultiDrawArraysIndirectBindlessCountNV(IJJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCountErrorContext");
        methods.put("glMultiDrawArraysIndirectBindlessCountNV(ILjava/nio/ByteBuffer;JIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCountErrorContext");
        methods.put("glMultiDrawArraysIndirectBindlessCountNV(IJJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCountErrorContext");
        methods.put("nglMultiDrawElementsIndirectBindlessCountNV(IIJJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCountErrorContext");
        methods.put("glMultiDrawElementsIndirectBindlessCountNV(IILjava/nio/ByteBuffer;JIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCountErrorContext");
        methods.put("glMultiDrawElementsIndirectBindlessCountNV(IIJJIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessMultiDrawIndirectCountErrorContext");
        return methods;
    }
}
